Actually fixed dark mode for real

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -68,6 +68,9 @@
     --ion-color-light-shade: #d7d8da;
     --ion-color-light-tint: #f5f6f9;
     --dataview-table-odd: #f0f0f0;
+
+    --ion-background-color: #fff;
+    --ion-color-step-950: #000;
 }
 
 
